# ops-beacon

./: LICENSE  README.md  makefile  pyproject.toml
notebooks/: sandbox.ipynb
src/application/use_cases/: ack_event.py  alert_events.py  create_event.py  real_time_even_processor.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  event.py
src/domain/enums/: __init__.py  alert_level.py  event_status.py
src/domain/exceptions/: __init__.py  domain_exceptions.py
src/domain/interfaces/: __init__.py  alert.py  alert_service.py  display.py  display_service.py  event_repository.py  repository.py  rules.py
tests/: README.md  __init__.py
tests/domain/: conftest.py  test_alert_level.py  test_event.py  test_event_status.py
